# easy_serial

./: LICENSE  README.md  publish.yml  pyproject.toml  setup.py
easy_serial/: __init__.py  serial_helper.py
tests/: test_serial_helper.py
